# dash_ecommerce

./: README.md  pyproject.toml
app/: main.py
data/: BASE_DADOS_CNPJ_FISIOTERAPIA_CURITIBA(BASE_DADOS_CNPJ_FISIOTERAPIA_CU).csv  EDA.py
